# mri_digital_twin

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml
digital_twin/: __init__.py  comparator.py  mri_loader.py  transformer.py  visualizer.py
digital_twin/security/: __init__.py  attacks.py  detectors.py
mri_processing/: __init__.py  download_mri.py  generate_metadata.py  main_pipeline.py  preprocess_mri.py
static/css/: base.css  index.css  security.css
static/js/: index.js  security.js
templates/: base.html  error.html  index.html  security.html
