[project]
name = "mri_processing_pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.11.0",
    "flask>=3.0.0",
    "matplotlib>=3.10.7",
    "nibabel>=5.3.2",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]